<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.localgems.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.localgems.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_vendors"
        android:name="com.example.localgems.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_vendors" />

    <fragment
        android:id="@+id/nav_product_details"
        android:name="com.example.localgems.ui.product.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.localgems.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <!--
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.localgems.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
-->
</navigation>