<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductDetailFragment">

    <!-- Immagine del prodotto -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/placeholder_product" />

    <!-- Nome del prodotto -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <!-- Vendor and name description -->
    <TextView
        android:id="@+id/product_vendor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_vendor" />



    <!-- Prezzo -->


    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/product_description"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Selezione quantità -->

    <!-- Pulsante aggiungi al carrello -->
    <LinearLayout
        android:id="@+id/quantity_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price">

        <Button
            android:id="@+id/quantity_minus_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="1"
            android:textSize="24dp" />

        <Button
            android:id="@+id/quantity_plus_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_location"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:text="Si trova a 20km, a Dos Hermanas (SE)" />

                <!-- TODO: ADD MAP SYMBOL -->
                <Button
                    android:id="@+id/product_show_on_map"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/show_on_map"
                    android:textSize="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/product_delivery_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_available" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <!-- Recensioni -->
    <TextView
        android:id="@+id/seller_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/seller_reviews"
        app:layout_constraintTop_toBottomOf="@id/add_to_cart_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Shopping Cart button (to be placed in the bottom right corner) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_shopping_cart"
        app:backgroundTint="@color/green_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_selector" />


</androidx.constraintlayout.widget.ConstraintLayout>