<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductDetailFragment">

    <!-- Immagine del prodotto -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/placeholder_product" />

    <!-- Nome del prodotto -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <!-- Vendor and name description -->
    <TextView
        android:id="@+id/product_vendor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_vendor" />

    <!-- Prezzo -->
    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/product_description"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Selezione quantità -->

    <Button
        android:id="@+id/review_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/order_review_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <!-- Recensioni -->

    <!-- Filtri per le recensioni -->


    <!-- Shopping Cart button (to be placed in the bottom right corner) -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_shopping_cart"
        app:backgroundTint="@color/green_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/review_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="16dp"
            android:elevation="8dp">

            <TextView
                android:id="@+id/review_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="X"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:padding="8dp" />

            <RatingBar
                android:id="@+id/review_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="0"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />


            <EditText
                android:id="@+id/review_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review_prompt"
                android:background="@android:color/darker_gray"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/review_publish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_publish_button"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/green_500"
                app:cornerRadius="16dp"
                style="@style/Widget.MaterialComponents.Button" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
